freedom/css/cover.css
.centered {
  font-family: 'Roboto', sans-serif;
    font-size: 7vw;
    font-stretch: wider;
    height: 30vh;
    text-shadow: 5px 8px 5px black;
    position: absolute;
    color: white;
    top: 30vw;
  }

  .navbar-header {
    height: 70px;
  }

  #navright {
    width: 100px;
  }

  #navimg {
    width: 100%;
  }

  .wel {
    width: 30vw;
    margin-bottom: 5vw;
  }

  .landing {
    width: 40vw;
  }

  .landingmain {
    margin-top: 70px;
  }

  .landingleft {
    display: inline-block;
    width: 60%;
    padding: 4vw 7vw;
  }
  .landingright {
    display: inline-block;
    width: 40%;
    position: absolute;
    top: 0;
  }

  a.accordion-toggle:hover {
    text-decoration: none;
  } 

  a.accordion-toggle:focus {
    text-decoration: none;
  } 

  #popup {
    z-index: 999;
    position: absolute;
    top: 0px;
    transform: scale(0);
    left: 30%;
    transition: ease 0.4s;
    width: 450px;
    height: 450px;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  }

.line1{
    position: absolute;
    color:white;
    /* top: 265%; */
    height:20px;
}

html {
  scroll-behavior: smooth;
}

#faq, #events, #activities, #abt_us, #gallery, #contact_us {
  position: relative;
  top: -60px;
}

.panel-heading .accordion-toggle:after {
  display: none !important;
}

#id1{
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;
}

#t1{
    animation: ease-in;
    direction: ltr;
}

#navbar_container{
    height: 90px;
}

#logo{
  width: 100%;
  padding: 5px 0;
}

#logofooter{
  width: 160px;
  height: 90px;
  padding: 4.5px 0;
}

.button {
  padding: 5px 70px 5px 70px !important;
  /* border: 2px solid black !important; */
  transition: ease 0.4s;
}

.button:hover {
  background-color: white;
  color: black !important;
}

.button > a {
  color: white;
  transition: ease 0.4s;
  background-color: transparent !important;
}

.button > a:hover {
  color: black;
  text-decoration: none;
}

.panel{
  border:none;
}

.panel-default {
  /* background-color: black !important; */
  transition: ease 0.4s !important;
  border: none;
}

.panel-heading {
  background-color: white !important;
  transition: ease 0.4s !important;
  text-align:left;
}

 .navbar-nav>li>a {
  color: black !important;
  font-weight: 400;
  font-size: 18px;
}

.panel-default>.panel-heading {
  color: black !important;
}

.panel-default:hover {
  background-color: white !important;
  color: black !important;
}
.panel-heading:hover {
  background-color: white !important;
  color: black !important;
  text-align: left;
}

.panel-body {
  color: black !important;
  background-color: white !important;
}

.button > a:focus {
  color: black;
  text-decoration: none;
}

#myNavbar {
  background-color: white;
}

.navbar-brand {
  padding: 0 0 10px 10px !important;
  padding-bottom: 20px;;
}

.navbar-nav>li>a {
  padding-top: 25px !important;
  padding-bottom: 25px !important;
}

nav > .container {
  height: 70px;
}

#nav_elements{
  font-family: 'Roboto', sans-serif;
    font-size: 21px;
    padding-top: 25px;
}

.contact_us_link{
  font-family: 'Roboto', sans-serif;
  font-size: 21px;
    padding-top: 25px;
}

#abt_us{
  /* font-family: 'Helvetica'; */
  font-family: 'Roboto', sans-serif;
  font-size: 18px;
  font-weight: 500;
}

#points{
  text-align: left;
  margin-bottom: 0 !important;
  font-size: 1.5vw;
}

.navbar-toggle {
  padding: 0 8px !important;
}

#third {
  margin-top: 8px !important;
}

.navbar-toggle span {
  top: 40% !important;
  left: 8px !important;
}

#navbar-right{
    font-size: 10px;
    padding-top: 5px;
}

#plus {
  position: absolute;
  left: 50%;
  cursor: pointer;
}

#plus2 {
  position: absolute;
  left: 86.5%;
  cursor: pointer;
}


#headings{
    /* text-decoration: underline; */
    /* font-family: 'Helvetica'; */
    font-family: 'Roboto', sans-serif;
    font-weight: 500;
    font-size: 2vw;
    margin-top: 0 !important;
    text-align: left;
    /* padding-top: 50px;; */
    padding-left: 3vw;
    color: rgb(246,123,57);
    font-weight: 700;
}

#cri{
    width:100%;
    border: 1px solid black
}

.carousel-inner img {
  width: 100%;
  height: 50vw !important;
}

/* #gallery_images{
    padding-left: 35px;
    padding-right:10px;
} */

#gallery_im {
   width: 220px !important;
   height: 300px !important;
}

.container{
    text-align: center;  
}

#img1{
    display:block;
    width: 59vw;
    /* width:370px;
    height:270px; */
    /* height: 40vh; */
    /* padding-right:20px; */
}

/* .item img {
    height: 450px !important;
    width: 850px !important;
} */

#main_hdg{
  font-family: 'Roboto', sans-serif;
  text-align: center;
  font-weight: 600;
  
}

#events{
  font-family: 'Montserrat', sans-serif;
  text-align: center;
  font-weight: 500;
}

.glyphicon-plus{
  /* padding-right: 20px; */
  /* height: 10px;
  width:10px;
  font-weight: 100; */
  color: rgb(246,123,57);
}

.glyphicon-minus{
  color: rgb(246,123,57);
}

#p1{
  /* font-family: 'Helvetica'; */
  font-family: 'Roboto', sans-serif;
    text-align: justify;
    font-size: 1.2vw;
    font-weight: 500;
    padding: 0 3vw;
}

.contact{
  font-family: 'Montserrat', sans-serif;
    /* text-align: center; */
    font-weight: 500;
}

#contleft {
  text-align: center;
  /* padding-right: 60px !important; */
}

#contright {
  text-align: center;
  /* padding-left: 60px !important; */
}

#inner {
  text-align: center !important;
}

.contactphoto{
    margin: 5px;
    opacity: 0.9;
    /* width: 100%; */
    border: thin solid darkslategray;
    border-radius: 250px;
    transition: border-radius .5s,transform .5s;
    overflow: hidden;
    height:170px;
}

.contactphoto:hover{
    opacity: 1.0;
}

.contactphoto1{
    float:right;
    margin: 5px;
    opacity: 0.9;
    border: thin solid darkslategray;
    border-radius: 250px;
    transition: border-radius .5s,transform .5s;
    overflow: hidden;
    height:170px;
}
/* ... */

